2003-02-04 Roberto Raggi <roberto@kdevelop.org>
	* added text hints support to qeditor

2003-02-04 F@lk Brettschneider <falk@kdevelop.org>
	* interface changed: KDevTopLevel renamed to KDevMainWindow, topLevel() renamed to mainWindow()
	* bugfix: proper work of session restoring of maximized views in Childframe mode
	* bugfix: avoid doubled menu entries for switch for showing/hiding of toolbars

2003-02-03 F@lk Brettschneider <falk@kdevelop.org>
	* bugfix: env vars now possible for URL of documentation views, means Qt docu works again
	* bugfix: show full filename in view caption (Childframe UI mode)
	* bugfix: use default icon for views in case that an icon wasn't assigned
	* bugfix: use 16x16 size for view icons (Childframe UI mode)
	
2003-02-01 Alexander Dymo <cloudtemple@mksat.net>
	* parts/cppsupport:
	  - Advanced Inheritance feature in "New Class" dialog:
	    automated constructor creation, method overriding
	    and access modifiers upgrading using base class
	    descriptions from the project class store
	  - Class is O_OBJECT option in "New Class dialog"
	  - Generate GTK class option in "New Class dialog"

2003-01-30 Julian Rockey <linux@jrockey.com>
	* lib/interfaces, src:
	  - Make CreateFile interface available globally. 
	* parts/autoproject:
	  - Use CreateFile interface if available for creating new files
	
2003-01-27 F@lk Brettschneider <falk@kdevelop.org>
	* QEditor-Plugin: Ctrl+Left, Ctrl+Right, Ctrl+Del and Ctrl+Backspace much more better now

2003-01-24 Harald Fernengel <harry@kdevelop.org>
        * default keys to move to next/prev window are now
          ALT-Right / ALT-Left (as in kate)

2003-01-18 Alexander Dymo <cloudtemple@mksat.net>
	* cppsupport:
	  - improve new class dialog
	    - support multiple inheritance for c++ classes
	    - cosmetic improvements

2003-01-17 Harald Fernengel <harry@kdevelop.org>
	* made CVS shell configurable, you can now use CVS via ssh.
	  Note that only password-less logins are supported,